--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,8 +25,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   min-height: 100vh;
 }
 
@@ -52,6 +53,23 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.directory {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.list {
+  list-style-type: none;
+}
+
+.list-item {
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 @media (prefers-color-scheme: light) {
